force-app/main/default/objects/Trip__c/Trip__c.object-meta.xml
<CustomObject>
    <label>Days in NSW/QLD or AUS</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Trip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Days in NSW/QLD or AUS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>