force-app/main/default/objects/Trip__c/fields/Entry_State__c.field-meta.xml
<CustomField>
    <fullName>Entry_State__c</fullName>
    <label>Entry State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>