force-app/main/default/objects/Trip__c/fields/Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exit Date</label>
    <type>Date</type>
</CustomField>