force-app/main/default/objects/Trip__c/fields/is_within_365_days__c.field-meta.xml
<CustomField>
    <fullName>is_within_365_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is within 365 days?</label>
    <type>Checkbox</type>
</CustomField>