force-app/main/default/objects/Trip__c/fields/Trip_Duration__c.field-meta.xml
<CustomField>
    <fullName>Trip_Duration__c</fullName>
    <formula>If(Cancelled__c = FALSE, (Exit_Date__c - Entry_Date__c) + 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>