force-app/main/default/objects/Trip__c/fields/Trip_Id__c.field-meta.xml
<CustomField>
    <fullName>Trip_Id__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Id,(TEXT(Entry_State__c ) + &apos;-&apos; +  Name), &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id</label>
    <type>Text</type>
</CustomField>