force-app/main/default/objects/Trip__c/fields/Trip_Status__c.field-meta.xml
<CustomField>
    <fullName>Trip_Status__c</fullName>
    <formula>IF(NOT(Cancelled__c), IF(Exit_Date__c &lt; TODAY(), &apos;Completed&apos;, &apos;Confirmed&apos;), &apos;Cancelled&apos;)</formula>
    <label>Trip Status</label>
    <type>Text</type>
</CustomField>