force-app/main/default/objects/Trip__c/validationRules/Residency_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Residency_Type_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISPICKVAL(Contact__r.Residency_Type__c, &apos;&apos;), true, false)</errorConditionFormula>
    <errorMessage>Please select a Type on the Contact Record</errorMessage>
</ValidationRule>